# cbb_model

./: .gitignore  full_backtest.txt  main.py  pyproject.toml
.github/workflows/: daily-picks.yml
data/fetchers/: kenpom_scraper.py  oddsshark_ncaab_all_teams_multi_season.py
data/kenpom/: kenpom_2022-04-04.csv  kenpom_2023-04-03.csv  kenpom_2024-04-08.csv  kenpom_2025-04-07.csv  kenpom_2025-11-03.csv  kenpom_2025-11-04.csv  kenpom_2025-11-05.csv  kenpom_2025-11-06.csv  kenpom_2025-11-07.csv  kenpom_2025-11-08.csv  kenpom_2025-11-09.csv  kenpom_2025-11-10.csv  kenpom_2025-11-11.csv  kenpom_2025-11-12.csv  kenpom_2025-11-13.csv  kenpom_2025-11-14.csv  kenpom_2025-11-15.csv  kenpom_2025-11-16.csv  kenpom_2025-11-17.csv  kenpom_2025-11-18.csv  kenpom_2025-11-19.csv  kenpom_2025-11-20.csv  kenpom_2025-11-21.csv  kenpom_2025-11-22.csv  kenpom_2025-11-23.csv  kenpom_2025-11-24.csv  kenpom_2025-11-25.csv  kenpom_2025-11-26.csv  kenpom_2025-11-27.csv  kenpom_2025-11-28.csv  kenpom_2025-11-29.csv  kenpom_2025-11-30.csv  kenpom_2025-12-01.csv  kenpom_2025-12-02.csv  kenpom_2025-12-03.csv  kenpom_2025-12-04.csv  kenpom_2025-12-05.csv  kenpom_2025-12-06.csv  kenpom_2025-12-07.csv  kenpom_2025-12-08.csv  (+42 more)
data/kenpom_extended/: four_factors.parquet  hca.parquet  height_experience.parquet  team_stats.parquet
data/raw/: 2022_ncaab.csv  2023_ncaab.csv  2024_ncaab.csv  2025_ncaab.csv  2026_ncaab.csv
docs/: DATA_SCHEMA.md  index.html  picks.html
notebooks/: kenpompy.ipynb
src/cbb/: backtest_ats.py  backtest_selective.py  ensemble_final.py  generate_html.py  predict_daily.py  (+3 more)
(+100 files in other folders)
