[project]
name = "cbb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "html5lib>=1.1",
    "kenpompy>=0.5.0",
    "lxml>=6.0.2",
    "numpy>=1.26,<2",
    "pandas>=2.3.3",
    "pyarrow>=23.0.0",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "scikit-learn>=1.7.2",
    "xgboost>=3.1.3",
]

[project.optional-dependencies]
ml = [
    # Torch is optional because newer versions don't ship Intel macOS wheels.
    # Install this extra only when you actually need torch-dependent code.
    # Pin to 2.2.2 for Intel macOS compatibility
    "torch==2.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.13",
]
